Fix use case pages: button overflow on smaller screens

--- a/website/optaplannerWebsite.css
+++ b/website/optaplannerWebsite.css
@@ -41,6 +41,7 @@ footer {
 .versionedButton > div {
     text-align: left;
     display: inline-block;
+    white-space: normal;
 }
 
 
